--- a/style.css
+++ b/style.css
@@ -88,22 +88,6 @@ main { display:flex; flex-direction:column; align-items:center; padding:60px 20p
   z-index:2147483647;
 }
 
-/* Go to Top Button */
-#topBtn { display:none;
-  position:fixed;
-  bottom:20px;
-  right:20px;
-  z-index:99;
-  font-size:18px;
-  border:none;
-  outline:none;
-  background-color:var(--tmdb-color);
-  color:white; cursor:pointer;
-  padding:10px 15px;
-  border-radius:50%;
-  box-shadow:0 2px 6px rgba(0,0,0,0.5);
-  transition:background-color 0.3s; 
-}
 
 input { width:100%; max-width:500px; padding:12px 15px; font-size:16px; border-radius:8px; border:none; margin-bottom:20px; background-color:var(--card-bg); color:var(--text-color); }
 input:focus { outline:2px solid var(--tmdb-color); }
@@ -137,4 +121,6 @@ footer { display:flex; align-items:center; justify-content:center; gap:10px; wid
 footer p { margin:0; color:var(--text-color); font-size:14px; text-align:center; font-weight:bold; }
 footer a { margin:0; color:var(--tmdb-color); font-size:14px; text-decoration:none; font-weight:bold; }
 footer a:hover { text-decoration:underline; color:#0d8ddb; }
-
+/* Go to Top Button */
+#topBtn { display:none; position:fixed; bottom:20px; right:20px; z-index:99; font-size:18px; border:none; outline:none; background-color:var(--tmdb-color); color:white; cursor:pointer; padding:10px 15px; border-radius:50%; box-shadow:0 2px 6px rgba(0,0,0,0.5); transition:background-color 0.3s; }
+#topBtn:hover { background-color:#0d8ddb; }
